force-app/main/default/objects/Activity/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left VMail</fullName>
            </value>
            <value>
                <fullName>Left VMail &amp; Sent Email</fullName>
            </value>
            <value>
                <fullName>No VMail &amp; No Email</fullName>
            </value>
            <value>
                <fullName>NonDM - Call Back</fullName>
            </value>
            <value>
                <fullName>NonDM - Emailed DM</fullName>
            </value>
            <value>
                <fullName>NonDM - Left DM VMail</fullName>
            </value>
            <value>
                <fullName>NonDM - No Interest &amp; No DM info</fullName>
            </value>
            <value>
                <fullName>NonDM - No Interest &amp; Sent Email</fullName>
            </value>
            <value>
                <fullName>DM - Oppty Later &amp; Sent DM Email</fullName>
            </value>
            <value>
                <fullName>DM - Oppty Later &amp; No Email</fullName>
            </value>
            <value>
                <fullName>DM - Appointment</fullName>
            </value>
            <value>
                <fullName>DM - Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>