force-app/main/default/objects/Activity/fields/synety__Actual_Date_Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>synety__Actual_Date_Time_of_Call__c</fullName>
    <label>Date &amp; Time of Activity</label>
    <type>DateTime</type>
</CustomField>