force-app/main/default/objects/Activity/fields/synety__Call_Category__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Category__c</fullName>
    <label>Call Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>