force-app/main/default/objects/Activity/fields/synety__Call_Notes_Summary__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Notes_Summary__c</fullName>
    <label>Call Notes Summary</label>
    <type>TextArea</type>
</CustomField>