force-app/main/default/objects/Activity/fields/synety__Call_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Session_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Session Id Value for SYNETY Call (Inbound and Outbound). Do not change this.</inlineHelpText>
    <label>Call Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>