force-app/main/default/objects/Activity/fields/synety__CloudCall_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__CloudCall_Campaign_Name__c</fullName>
    <label>CloudCall Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>