force-app/main/default/objects/Activity/fields/synety__From__c.field-meta.xml
<CustomField>
    <fullName>synety__From__c</fullName>
    <label>Call From</label>
    <type>Phone</type>
</CustomField>