force-app/main/default/objects/Activity/fields/synety__i_account__c.field-meta.xml
<CustomField>
    <fullName>synety__i_account__c</fullName>
    <label>i_account</label>
    <length>150</length>
    <type>Text</type>
</CustomField>