force-app/main/default/objects/Activity/fields/synety__Is_Created_By_Plugin__c.field-meta.xml
<CustomField>
    <fullName>synety__Is_Created_By_Plugin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created By Plugin</label>
    <type>Checkbox</type>
</CustomField>