force-app/main/default/objects/Activity/fields/synety__Note_Source__c.field-meta.xml
<CustomField>
    <fullName>synety__Note_Source__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calls Combiner</fullName>
                <label>Call</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>