force-app/main/default/objects/Activity/fields/synety__To__c.field-meta.xml
<CustomField>
    <fullName>synety__To__c</fullName>
    <label>Call To</label>
    <type>Phone</type>
</CustomField>