force-app/main/default/objects/Activity/fields/TrackIT__Activity_Type_Holder__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Activity_Type_Holder__c</fullName>
    <description>Field to hold the different type of event created by inspections and maintenance in Facility Manager.</description>
    <label>Activity Type Holder</label>
    <length>40</length>
    <type>Text</type>
</CustomField>