force-app/main/default/objects/Activity/fields/TrackIT__Assignee__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays assignee from Facility Manager assignee object</description>
    <inlineHelpText>Displays assignee at the time when event was created. Update if necessary.</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>