force-app/main/default/objects/Activity/fields/TrackIT__Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays locations from Facility Manager location object</description>
    <inlineHelpText>Displays location at the time when event was created. Update if necessary.</inlineHelpText>
    <label>Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>